# libcmor

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: array.h  bitconverter.h  mempool.h  metamacros.h  points.h  quaternion.h  queue.h  stack.h
src/: array.c  bitconverter.c  mempool.c  quaternion.c  queue.c  stack.c
